[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncio"
version = "4.0.0"
description = "Deprecated backport of asyncio; use the stdlib package instead"
readme = "README.md"
requires-python = ">=3.4"
license = {file = "COPYING"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
]
urls = {"Homepage" = "https://docs.python.org/3/library/asyncio.html"}

[tool.setuptools]
packages = []
